k8s/cms/kustomize/cms/overlays/local/strapi/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi
  labels:
    app: strapi
spec:
  tls:
  - hosts:
      - cms.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: cms.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: STRAPI_SERVICE_NAME
            port:
              name: http
